syntax = "proto3";

package pb;

message checkAlertsRequest{
uint64 alertMode = 1;
}

message checkAlertsResponse{
string output = 1;
}

message testAlertsRequest{
string testMessage = 1;
}

message testAlertsResponse{
string  output = 1;
}

//Mute SMS = "SMS"
//Mute Email = "Email"
message muteAlertRequest{
string muteAlertType = 1;
}

//Returns what was sucessfully muted
message muteAlertResponse{
string output = 1;
}

message getCurrentWeatherRequest{}

message getCurrentWeatherResponse{
string weatherInfo = 1;
}

service FloodAlertAppService {
rpc checkAlerts (checkAlertsRequest) returns (checkAlertsResponse){}
rpc testAlerts  (testAlertsRequest)   returns (testAlertsResponse){}
rpc muteAlerts  (muteAlertRequest)  returns (muteAlertResponse){}
}
